--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -238,3 +238,9 @@ height: 250px;
 .margin-5px {
   margin-left: 8px;
 }
+.progress {
+  background: $primarylight !important;
+}
+.indeterminate {
+  background: $secondary !important;
+}
